--- a/04 - Final project/report04.Rmd
+++ b/04 - Final project/report04.Rmd
@@ -119,6 +119,18 @@ $\mu$ é uma constante, $\tau_{i}$ é o efeito do i-ésimo "tratamento", $X_{ij}
 }
 \end{table}
 
+em que:
+\begin{eqnarray}
+S_{yy} = \,, \label{eq:002} \\
+S_{xx} = \,, \label{eq:003} \\
+S_{xy} = \,, \label{eq:004} \\
+T_{yy} = \,, \label{eq:005} \\
+T_{xx} = \,, \label{eq:006} \\
+T_{xy} = \,, \label{eq:007} \\
+E_{yy} = \,, \label{eq:008} \\
+E_{xx} = \,, \label{eq:009} \\
+E_{xy} = \,. \label{eq:010}
+\end{eqnarray}
 ## 3.2 Cálculo do tamanho amostral para o ANOVA
 
 O cálculo do tamanho amostral para a técnica ANOVA pode ser feito iterativamente até encontrar o número $n$ tal que:
